--- a/javascript-getting-started/03/demos/before/js-demo/index.html
+++ b/javascript-getting-started/03/demos/before/js-demo/index.html
@@ -57,7 +57,7 @@
     <!-- HEADER -->
     <div class="jumbotron jumbotron-fluid crf-hero d-flex">
         <div class="container d-flex flex-column justify-content-center align-items-sm-stretch align-items-md-center">
-            <h1 class="col-sm-12">GET A GRIP</h1>
+            <h1 id="message" class="col-sm-12">GET A GRIP</h1>
             <h2>20% OFF</h2>
             <p class="lead">THROUGHOUT THE SEASON</p>
         </div>
@@ -199,7 +199,9 @@
         </div>
         <div class="crf-footer--copyright text-primary">@Pluralsight 2018</div>
     </footer>
-</div>
 
+</div>
+<script src="utils.js"></script>
+<script src="./home.js"></script>
 </body>
 </html>
